--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 <style>
 div {}
 .bg-main {       
-    background-image: url("https://i.imgur.com/FyRXvWn.jpg");
+    background-image: url("/images/St_Stephen_Landscape_Edit.jpg");
     height: 100vh;
     width: 100%;
     background-position: center;
