--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ div {}
 
 @media only screen and (max-width: 480px) {
     
-.bgimg {
+.bg-main {
     background-image: url("/images/St_Stephen_Edit.png");
 }
 
